--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
   "name": "storage-area-explorer",
-  "version": "0.4.2",
+  "version": "0.4.4",
   "devDependencies": {
-    "bower": "~1.3.8",
+    "bower": "^1.8.14",
     "grunt": "~0.4.5",
     "grunt-bower-task": "^0.4.0",
+    "grunt-cli": "^1.4.3",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-karma": "~0.12.1",
-    "grunt-zip": "~0.9.2",
-    "karma": "~0.13.10",
-    "karma-chrome-launcher": "~0.2.1",
-    "karma-coverage": "~0.1.0",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "~0.1.3",
-    "karma-junit-reporter": "~0.1"
+    "grunt-zip": "~0.9.2"
   },
   "scripts": {
-    "test": "grunt ci"
+    "test": "npx grunt"
   }
 }
