--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,14 @@
     "description": "Simple editor for Storage Area for Chrome Packaged Apps & Extensions",
     "devtools_page": "app/html/devtoolsBackground.html",
     "background": {
-        "persistent": false,
-        "scripts": ["app/chrome/background.js"]
-    }, "permissions": ["clipboardRead","clipboardWrite","<all_urls>"],
-    "manifest_version": 2
+        "service_worker": "app/chrome/background.js"
+    },
+    "permissions": [
+        "clipboardRead",
+        "clipboardWrite"
+    ],
+    "host_permissions": [
+        "<all_urls>"
+    ],
+    "manifest_version": 3
 }
